# ScenicRoute

./: CMakeLists.txt  Makefile  README.md
include/: custom_svc.h  debug.h  dma.h  proc.h  thread.h
include/kernel/: kmem.h  kproc.h
meta/: detour.rsf
source/: debug.c  dma.c  proc.c  svc.s
source/kernel/: kmem.c  kproc.c
src/: debug.c  dma.c  kmem.c  kmem.h  main.c  proc.c
src/kernel/: kmem.c  kproc.c
